--- a/www/app/views/dashboard.tpl.html
+++ b/www/app/views/dashboard.tpl.html
@@ -1,4 +1,5 @@
 <div class="container" style="margin-top: 80px;">
-    <h1>User Dashboard</h1>
+    <h1>User Dashboard</h1>        <h5>Welcome, {{currentUser.name}}</h5>
+
     <button class="btn btn-warning" ng-click="logout()">Logout</button>
 </div>
