--- a/www/app/views/login.tpl.html
+++ b/www/app/views/login.tpl.html
@@ -31,5 +31,10 @@
 </div>
 
 <ul ng-if="isAuthenticated()">
-    <button class="btn btn-default" ng-click="logout()">Logout</button>
+    <div class="container" style="margin-top: 80px;">
+        <h1>User Dashboarda</h1>        <h5>Welcome {{currentUser.name}}</h5>
+
+        <button class="btn btn-warning" ng-click="logout()">Logout</button>
+    </div>
+
 </ul>
